--- a/src/index.css
+++ b/src/index.css
@@ -91,11 +91,12 @@ code {
   }
 
   .teams--container {
-    height: 100%;
-    max-height: 600px;
+    max-height: 700px;
     width: 100%;
     max-width: 400px;
     box-sizing: border-box;
+    margin-top: 30px;
+    padding: 10px;
   }
 
   .team--image {
@@ -108,11 +109,13 @@ code {
     width: 110px;
     height: 110px;
     box-sizing: border-box;
+    margin-bottom: 30px;
   }
 
   .team--label {
-    font-size: .6rem;
+    font-size: .8rem;
     height: 120px;
+    padding: 2px;
   }
 
   .prediction--score {
